tests/ui/cfg/target-modifiers/stability.no_feat.stderr
error[E0658]: `cfg(target_modifier_fixed_x18)` is experimental and subject to change
  --> $DIR/stability.rs:8:7
   |
LL | #[cfg(target_modifier_fixed_x18)]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_unstable_target_modifier)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_modifier_indirect_branch_cs_prefix)` is experimental and subject to change
  --> $DIR/stability.rs:12:7
   |
LL | #[cfg(target_modifier_indirect_branch_cs_prefix)]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_unstable_target_modifier)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_modifier_reg_struct_return)` is experimental and subject to change
  --> $DIR/stability.rs:16:7
   |
LL | #[cfg(target_modifier_reg_struct_return)]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_unstable_target_modifier)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_modifier_regparm)` is experimental and subject to change
  --> $DIR/stability.rs:20:7
   |
LL | #[cfg(target_modifier_regparm="0")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_unstable_target_modifier)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_modifier_retpoline)` is experimental and subject to change
  --> $DIR/stability.rs:24:7
   |
LL | #[cfg(target_modifier_retpoline)]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_unstable_target_modifier)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_modifier_retpoline_external_thunk)` is experimental and subject to change
  --> $DIR/stability.rs:28:7
   |
LL | #[cfg(target_modifier_retpoline_external_thunk)]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_unstable_target_modifier)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
